--- a/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
+++ b/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
@@ -3,4 +3,7 @@
 @using LinkDev.IKEA.PL.ViewModels.Common
 @using LinkDev.IKEA.PL.ViewModels.Departments
 @using LinkDev.IKEA.BLL.Models.Departments
+@using LinkDev.IKEA.BLL.Models.Employees
+@using LinkDev.IKEA.DAL.Common.Enums
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
