--- a/LinkDev.IKEA.PL/Views/Employees/Create.cshtml
+++ b/LinkDev.IKEA.PL/Views/Employees/Create.cshtml
@@ -38,6 +38,12 @@
             <input asp-for="PhoneNumber" class="form-control" />
             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
+        <div class="form-group mb-3">
+            <label asp-for="EmployeeType" class="control-label"></label>
+            <select asp-for="EmployeeType" asp-items="Html.GetEnumSelectList<EmployeeType>()" class="form-control">
+                <option value="">Select Employee Type</option>
+            </select>
+        </div>
         <div class="form-group mb-3">         
             <label class="form-check-label" asp-for="Gender"></label><br />
             @foreach (Gender genderOption in Enum.GetValues(typeof(Gender)))
@@ -48,12 +54,7 @@
              </label>   
             }
         </div>
-        <div class="form-group mb-3">        
-            <label asp-for="EmployeeType" class="control-label"></label>
-            <select asp-for="EmployeeType" asp-items="Html.GetEnumSelectList<EmployeeType>()" class="form-control">
-               <option value="">Select Employee Type</option>
-            </select>
-        </div>
+     
         <div class="form-check mb-3">
             <input asp-for="IsActive" class="form-check-input" />
             <label class="form-check-label" asp-for="IsActive"></label>
@@ -66,7 +67,7 @@
       
         <div class="mt-4">
             <input type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" class="btn btn-light"> Back To List </a>
+            <a asp-controller="Employee" asp-action="Index" class="btn btn-light"> Back To List </a>
         </div>
     </form>
 </div>
