--- a/LinkDev.IKEA.PL/Views/Employees/Details.cshtml
+++ b/LinkDev.IKEA.PL/Views/Employees/Details.cshtml
@@ -21,49 +21,52 @@
             <div class="form-group mb-3">
                 <label class="form-label" asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" readonly />
-                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
                 <label class="form-label" asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" readonly />
-                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
                 <label class="form-label" asp-for="Address"></label>
                 <input asp-for="Address" class="form-control" readonly />
-                <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
                 <label class="form-label" asp-for="Age"></label>
                 <input asp-for="Age" class="form-control" readonly />
-                <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
                 <label class="form-label" asp-for="Salary"></label>
                 <input asp-for="Salary" class="form-control" readonly />
-                <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
                 <label class="form-label" asp-for="PhoneNumber"></label>
                 <input asp-for="PhoneNumber" class="form-control" readonly />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label class="form-check-label" asp-for="Gender"></label><br />
+                @foreach (Gender genderOption in Enum.GetValues(typeof(Gender)))
+                {
+                    <div class="form-check">
+                        <input type="radio" disabled class="form-check-input" asp-for="Gender" value="@genderOption" />
+                        <label class="form-check-label" asp-for="Gender">
+                            @genderOption
+                        </label>
+                    </div>
+                }
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="EmployeeType" class="control-label"></label>
+                <select asp-for="EmployeeType" disabled asp-items="Html.GetEnumSelectList<EmployeeType>()" class="form-control">
+                    <option value="">Select Employee Type</option>
+                </select>
             </div>
             <div class="form-check mb-3">
-                <input asp-for="Gender" class="form-check-input" readonly />
-                <label class="form-check-label" asp-for="Gender"></label>
-                <span asp-validation-for="Gender" class="text-danger"></span>
-            </div>
-            <div class="form-check mb-3">
-                <input asp-for="EmployeeType" class="form-check-input" readonly />
-                <label class="form-check-label" asp-for="EmployeeType"></label>
-            </div>
-            <div class="form-check mb-3">
-                <input asp-for="IsActive" class="form-check-input" readonly />
+                <input asp-for="IsActive" class="form-check-input" disabled />
                 <label class="form-check-label" asp-for="IsActive"></label>
             </div>
             <div class="form-group mb-3">
                 <label class="form-label" asp-for="HiringDate"></label>
-                <input asp-for="HiringDate" class="form-control" readonly />
+                <input asp-for="HiringDate" class="form-control" disabled />
                 <span asp-validation-for="HiringDate" class="text-danger"></span>
             </div>
         </div>
