--- a/LinkDev.IKEA.PL/Views/Department/Create.cshtml
+++ b/LinkDev.IKEA.PL/Views/Department/Create.cshtml
@@ -33,3 +33,8 @@
     </from>
 </div>
 
+@section ValidationScripts 
+{
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
