--- a/LinkDev.IKEA.PL/Views/Department/Edit.cshtml
+++ b/LinkDev.IKEA.PL/Views/Department/Edit.cshtml
@@ -32,3 +32,8 @@
     </div>
 </from>
 </div>
+@section ValidationScripts
+{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
