--- a/LinkDev.IKEA.PL/Views/Employees/Create.cshtml
+++ b/LinkDev.IKEA.PL/Views/Employees/Create.cshtml
@@ -71,3 +71,8 @@
         </div>
     </form>
 </div>
+@section ValidationScripts
+{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
