--- a/LinkDev.IKEA.PL/Views/Department/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Department/Index.cshtml
@@ -25,28 +25,12 @@
             @foreach (var department in Model)
             {
                 <tr>
-                    <td>@department.Code</td>
-                    <td>@department.Name</td>
-                    <td>@department.CreationDate</td>
-                    <td>
-                        <a asp-controller="Department" asp-action="Details" asp-route-id="@department.Id" class="btn btn-warning">
-                            <i class="fas fa-eye"></i> Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Department" asp-action="Edit" asp-route-id="@department.Id" class="btn btn-success">
-                            <i class="fas fa-edit"></i> Update
-                        </a>
-                    </td>
-                    <td>
-                     @*    <a asp-controller="Department" asp-action="Delete" asp-route-id="@department.Id" class="btn btn-danger">
-                            <i class="fas fa-trash"></i> Delete
-                        </a> *@
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
-                            <i class="fas fa-trash"></i> Delete
-                        </button>
+                    <td>@Html.DisplayFor(X => department.Code)</td>
+                    <td>@Html.DisplayFor(X => department.Name)</td>
+                    <td>@Html.DisplayFor(X => department.CreationDate)</td>
+                    <partial name="_ButtonPartial" model="@department.Id"/>
 
-                    </td>
+
                 </tr>
                 <!-- Modal -->
                 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
