--- a/LinkDev.IKEA.PL/Views/Employees/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Employees/Index.cshtml
@@ -35,24 +35,7 @@
                     <td>@Html.DisplayFor(X => employee.Salary)</td>
                     <td>@Html.DisplayFor(X => employee.IsActive)</td>
                     <td>@Html.DisplayFor(X => employee.Gender)</td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Details" asp-route-id="@employee.Id" class="btn btn-warning">
-                            <i class="fas fa-eye"></i> Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-controller="Employee" asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-success">
-                            <i class="fas fa-edit"></i> Update
-                        </a>
-                    </td>
-                    <td>
-                        @*  <a asp-controller="Department" asp-action="Delete" asp-route-id="@department.Id" class="btn btn-danger">
-                <i class="fas fa-trash"></i> Delete
-                </a> *@
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
-                            <i class="fas fa-trash"></i> Delete
-                        </button>
-                    </td>
+                    <partial name="_ButtonPartial" model="@employee.Id" />
 
                 </tr>
                 <!-- Modal -->
@@ -63,7 +46,7 @@
                                 <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Employee</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                            <div class="modal-body">
+                            <div class="modal-body"> 
                                 Are You Sure To Delete This Employee?
                             </div>
                             <div class="modal-footer">
