Part  05 ViewData and ViewBag

--- a/LinkDev.IKEA.PL/Views/Department/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Department/Index.cshtml
@@ -1,7 +1,15 @@
 ﻿@model IEnumerable<DepartmentDto>
 @{
     ViewData["Title"] = "Department";
+    string? viewDataMessage = ViewData["Message"] as string;
+    string? viewBagMessage = ViewBag.Message;
 }
+
+
+
+<div class="alert alert-info">
+    @ViewData["Message"]
+</div>
 
 <h1>Department</h1>
 <br />
