--- a/LinkDev.IKEA.PL/Views/Department/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Department/Index.cshtml
@@ -1,11 +1,25 @@
 ﻿@model IEnumerable<DepartmentDto>
 @{
     ViewData["Title"] = "Department";
-    string? viewDataMessage = ViewData["Message"] as string;
-    string? viewBagMessage = ViewBag.Message;
+  
 }
 
-
+@if (!string.IsNullOrEmpty(@TempData["Message"] as string))
+{
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <img src="..." class="rounded me-2" alt="...">
+                <strong class="me-auto">IKEA</strong>
+                @*  <small>@DateTime.Now.Minute mins ago</small>
+            *@   <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                @TempData["Message"]
+            </div>
+        </div>
+    </div>
+}
 
 <div class="alert alert-info">
     @ViewData["Message"]
