--- a/LinkDev.IKEA.PL/Views/Employees/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Employees/Index.cshtml
@@ -7,6 +7,16 @@
 <br />
 <a asp-controller="Employee" asp-action="Create" class="btn btn-primary">Create New Employee</a>
 <br />
+<form asp-action="Index" method="get" class="mt-5 row justify-content-center align-items-center">
+    <div class="row col-8 offset-1">
+        <div class="col-8">
+            <input type="text" name="Search" class="form-control" id="searchInp" placeholder="Search By Name" />
+        </div>
+        <div class="col-4">
+            <input type="submit" value="Search" class="btn btn-success" />
+        </div>
+    </div>
+</form>
 @if (Model.Count() > 0)
 {
     <table class="table table-striped table-hover mt-4">
@@ -24,41 +34,8 @@
                 <th>Delete</th>
             </tr>
         </thead>
-        <tbody class="text-center">
-            @foreach (var employee in Model)
-            {
-                <tr>
-                    <td>@Html.DisplayFor(X => employee.Name)</td>
-                    <td>@Html.DisplayFor(X => employee.Email)</td>
-                    <td>@Html.DisplayFor(X => employee.EmployeeType)</td>
-                    <td>@Html.DisplayFor(X => employee.Age)</td>
-                    <td>@Html.DisplayFor(X => employee.Salary)</td>
-                    <td>@Html.DisplayFor(X => employee.IsActive)</td>
-                    <td>@Html.DisplayFor(X => employee.Gender)</td>
-                    <partial name="_ButtonPartial" model="@employee.Id" />
-
-                </tr>
-                <!-- Modal -->
-                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Employee</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body"> 
-                                Are You Sure To Delete This Employee?
-                            </div>
-                            <div class="modal-footer">
-                                <form asp-action="Delete" asp-route-id="@employee.Id" method="post">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
+        <tbody class="text-center" id= "employeeList">
+            <partial name="Partials/_EmployeeListPartial" model="@Model" />
         </tbody>
     </table>
 }
